<resources>
    <string name="app_name">Garage App</string>
    <string name="welcome">Welcome To The Auto Lab Garage App!</string>
    <string name="option">Please Select A Option</string>
    <string name="cars">CARS</string>
    <string name="bikes">BIKES</string>
    <string name="tools">TOOLS</string>
    <string name="start">Start</string>
    <string name="item_name">Item Name</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="ad">Ad</string>
    <string name="background">Background Image</string>





    <string-array name="car_name">
        <item>Ford Jeep</item>
        <item>VinFast Electric</item>
        <item>Skoda Octavia</item>
        <item>Mazda Iconic</item>
        <item>Chrysler</item>
        <item>Dodge Ram</item>
        <item>Mini Countryman</item>
    </string-array>

    <string-array name="car_year">
        <item>2018</item>
        <item>2023</item>
        <item>2017</item>
        <item>2022</item>
        <item>1989</item>
        <item>2009</item>
        <item>2023</item>
    </string-array>

    <string-array name="car_price">
        <item>€10,000</item>
        <item>€60,000</item>
        <item>€20,000</item>
        <item>€120,000</item>
        <item>€90,000</item>
        <item>€1,250</item>
        <item>€34,000</item>
    </string-array>





    <string-array name="bike_name">
        <item>A-3</item>
        <item>Moto 2000</item>
        <item>Black 1340 Turbo</item>
        <item>Cafe Racer</item>
        <item>Vintage Police Bike</item>
        <item>SP-150</item>
        <item>A-3 Twin</item>
    </string-array>

    <string-array name="bike_year">
        <item>2019</item>
        <item>2022</item>
        <item>2022</item>
        <item>2018</item>
        <item>2017</item>
        <item>2023</item>
        <item>2019</item>
    </string-array>

    <string-array name="bike_price">
        <item>€10,000</item>
        <item>€15,000</item>
        <item>€20,000</item>
        <item>€8,000</item>
        <item>€30,000</item>
        <item>€2,750</item>
        <item>€22,000</item>
    </string-array>

    <string-array name="tool_name">
        <item>Spanner</item>
        <item>3 Edge Spoke</item>
        <item>Pliers Pack</item>
        <item>Flat Screw Driver</item>
        <item>Hex Driver</item>
        <item>Wrench</item>
        <item>Crimping Tool</item>
    </string-array>

    <string-array name="tool_year">
        <item>New</item>
        <item>New</item>
        <item>New</item>
        <item>New</item>
        <item>New</item>
        <item>New</item>
        <item>New</item>
    </string-array>

    <string-array name="tool_price">
        <item>€20</item>
        <item>€60</item>
        <item>€12</item>
        <item>€19</item>
        <item>€25</item>
        <item>€29</item>
        <item>€9</item>
    </string-array>

    <string-array name="car_description">
        <item>Perfect condition with NCT until 2025. 2 previous owners.</item>
        <item>Perfect condition with NCT until 2025. 2 previous owners.</item>
        <item>Perfect condition with NCT until 2025. 2 previous owners.</item>
        <item>Perfect condition with NCT until 2025. 2 previous owners.</item>
        <item>Perfect condition with NCT until 2025. 2 previous owners.</item>
        <item>Perfect condition with NCT until 2025. 2 previous owners.</item>
        <item>Perfect condition with NCT until 2025. 2 previous owners.</item>
    </string-array>

    <string-array name="bike_description">
        <item>Slight wear but overall no problems. 5 previous owners.</item>
        <item>Slight wear but overall no problems. 5 previous owners.</item>
        <item>Slight wear but overall no problems. 5 previous owners.</item>
        <item>Slight wear but overall no problems. 5 previous owners.</item>
        <item>Slight wear but overall no problems. 5 previous owners.</item>
        <item>Slight wear but overall no problems. 5 previous owners.</item>
        <item>light wear but overall no problems. 5 previous owners.</item>
    </string-array>

    <string-array name="tool_description">
        <item>Brand new. Perfect condition.</item>
        <item>Brand new. Perfect condition.</item>
        <item>Brand new. Perfect condition.</item>
        <item>Brand new. Perfect condition.</item>
        <item>Brand new. Perfect condition.</item>
        <item>Brand new. Perfect condition.</item>
        <item>Brand new. Perfect condition.</item>
    </string-array>
</resources>